# vTag_3.0.3z

./: .cproject  .project  CMakeLists.txt  partitions.csv  partitions_example.csv  sdkconfig  sdkconfig.old
MyLib/: AT_Function.h  Common.h  ESP32_GPIO.h  FOTA.h  GPS.h  MQTT.h  SPIFFS_user.h  Sim7070G_Battery.h  Sim7070G_General_Control.h  led_indicator.h  sensor.h  string_user.h
main/: AT_Function.c  CMakeLists.txt  FOTA.c  GPS.c  MQTT.c  SPIFFS_user.c  Sim7070G_Battery.c  Sim7070G_General_Control.c  common.h  led_indicator.c  main.c  real_time_stats_example_main.c  sensor.c  string_user.c
main/simcom7070/: 7070_config.h  simcom7070.c  simcom7070.h
main/simcom7070/gps_nmea/: GPS.c
main/string_user/: location_parser.c  location_parser.h  string_parse.c  string_parse.h
main/ulp/: blink.S
